--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,12 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  id: 1
+  email: 'some@user.com'
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+
+two:
+  id: 2
+  email: 'test@test.com'
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
