--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,10 +8,12 @@ one:
   id: 1
   email: 'some@user.com'
   username: 'Alice'
+  city: 'Berlin'
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 
 two:
   id: 2
   email: 'test@test.com'
   username: 'Bob'
+  city: 'Hamburg'
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
